[tool.poetry]
name = "nft_generator"
version = "0.1.0"
description = "An advanced NFT Generator"
authors = ["Titouan Bénard <itotutona@evta.fr>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pyaml = "^21.10.1"
click = "^8.0.3"


[tool.poetry.dev-dependencies]
pytest = "^0.0.1"
tox = "^3.24.4"
coverage = "^6.2"
pip = "^21.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
